Fixed spacing for labels when series path is abnormally long

--- a/src/UI/Series/series.less
+++ b/src/UI/Series/series.less
@@ -420,7 +420,13 @@
 
 .series-info {
   .row {
-    margin-bottom: 5px;
+    margin-bottom : 3px;
+
+    .label {
+      display       : inline-block;
+      margin-bottom : 2px;
+      padding       : 4px 6px 3px 6px
+    }
   }
 
   .series-info-links {
